@@ -36,7 +36,11 @@
  */
 
 #include "global.h"
+#if defined(USE_NCURSES) && !defined(RENAMED_NCURSES)
+#include <ncurses.h>
+#else
 #include <curses.h>
+#endif
 #include <setjmp.h>	/* jmp_buf */
 #include <stdlib.h>
 
